Spacing and alignment fixes, colours for meters

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ a, a:link, a:visited, a:focus {
 hr {
 	border-top: 1px solid rgba(10, 10, 10, .40);
 	border-bottom: 1px solid rgba(230, 230, 230, .20);
+	margin: 20px 0;
 }
 
 /* Content */
@@ -96,7 +97,6 @@ hr {
 	font-size: 5em;
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
-	/* box-shadow: 0px 5px 10px #2c2c2c; */
 }
 
 .class-header-title {
@@ -121,7 +121,6 @@ hr {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* box-shadow: 0px 0px 5px #000; */
 }
 
 .build-header-text {
@@ -132,31 +131,14 @@ hr {
     max-width: 90%;
 	margin: 0 auto 30px auto;
 	background: #6e6e6e;
-	padding: 15px 0;
+	padding: 20px 0;
 	border-bottom: 2px solid #5b9e19;
-	/* height: 400px; */
-	/* box-shadow: 0px 0px 5px #000; */
 }
 
 .build-content-wrap {
 	max-width: 90%;
 	margin: 0 auto;
-	/* padding-top: 15px; */
 }
-
-.build-item {
-	margin-top: 10px;
-}
-
-/* .gear-rota {
-	text-align: center;
-}
-
-.gear, .rota {
-	display: inline-block;
-	margin: 0 auto;
-	width: 49%;
-} */
 
 .build-desc {
 	text-align: center;
@@ -165,6 +147,10 @@ hr {
 .gear-desc, .rota-desc {
 	text-align: center;
 	font-size: 1.2em;
+}
+
+.gear, .rota {
+	text-align: center;
 }
 
 .half-col {
@@ -187,7 +173,7 @@ hr {
   height: 2em;
   margin: 1em 0 0 0;
   position: relative;
-  background: rgba(63, 63, 63, 0.1);
+  background: rgba(63, 63, 63, 0.4);
   background: lighten #3f3f3f, 50%;
   display: inline-block;
   margin-right: 1em;
@@ -206,7 +192,6 @@ hr {
 
 .fill {
   height: 100%;
-  background: #5b9e19;
   display: inline-block;
   z-index: 222;
   position: absolute;
@@ -224,4 +209,5 @@ hr {
 .build-link {
 	display: flex;
 	justify-content: center;
+	margin-top: 20px;
 }
